# secretbox

./: .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
benches/: chacha20.rs  poly1305.rs  salsa20.rs  secretbox.rs
src/: csprng.rs  kdf.rs  lib.rs
src/chacha20/: mod.rs  simd.rs  trivial.rs
src/poly1305/: mod.rs
src/salsa20/: mod.rs  simd.rs  trivial.rs
